--- a/app/src/main/res/layout/activity_cours.xml
+++ b/app/src/main/res/layout/activity_cours.xml
@@ -7,33 +7,34 @@
     tools:context=".CoursActivity">
 
     <TableLayout
-        android:layout_width="421dp"
-        android:layout_height="537dp"
-        android:layout_margin="30dp"
+        android:layout_width="fill_parent"
+        android:layout_height="499dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.84"
-        tools:layout_editor_absoluteX="4dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:weightSum="2">
 
             <Button
                 android:id="@+id/addition"
-                android:layout_width="160dp"
-                android:layout_height="120dp"
-                android:layout_margin="20dp"
+                android:layout_width="0dp"
+                android:layout_height="100dp"
+                android:layout_margin="15dp"
+                android:layout_weight="1"
                 android:onClick="goto_addition"
                 android:text="addition" />
 
             <Button
                 android:id="@+id/soustraction"
-                android:layout_width="160dp"
-                android:layout_height="120dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="20sp"
-                android:layout_marginEnd="20dp"
+                android:layout_width="0dp"
+                android:layout_height="100dp"
+                android:layout_margin="15dp"
+                android:layout_weight="1"
                 android:onClick="goto_soustraction"
                 android:text="soustraction"
                 android:textSize="12sp" />
@@ -41,45 +42,53 @@
         </TableRow>
 
         <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:weightSum="1">
 
             <Button
                 android:id="@+id/multiplication"
-                android:layout_width="160dp"
-                android:layout_height="120dp"
-                android:layout_margin="20dp"
+                android:layout_width="0dp"
+                android:layout_height="100dp"
+                android:layout_margin="15dp"
+                android:layout_weight="0.5"
                 android:onClick="goto_multiplication"
-                android:text="multiplication" />
+                android:text="produit" />
 
             <Button
                 android:id="@+id/division"
-                android:layout_width="130dp"
-                android:layout_height="130dp"
-                android:layout_margin="20dp"
-                android:layout_marginEnd="20dp"
+                android:layout_width="0dp"
+                android:layout_height="100dp"
+                android:layout_margin="15dp"
+                android:layout_weight="0.5"
                 android:onClick="goto_division"
                 android:text="division" />
         </TableRow>
 
         <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:weightSum="1">
 
             <Button
                 android:id="@+id/factoriel"
-                android:layout_width="160dp"
-                android:layout_height="120dp"
-                android:layout_margin="20dp"
+                android:layout_width="0dp"
+                android:layout_height="100dp"
+                android:layout_margin="15dp"
+                android:layout_weight="0.5"
                 android:onClick="goto_factorielle"
                 android:text="factoriel" />
 
             <Button
                 android:id="@+id/puissance"
-                android:layout_width="170dp"
-                android:layout_height="120dp"
-                android:layout_margin="20dp"
-                android:layout_marginEnd="20dp"
+                android:layout_width="0dp"
+                android:layout_height="100dp"
+                android:layout_margin="15dp"
+                android:layout_weight="0.5"
                 android:onClick="goto_puissance"
                 android:text="puissance" />
         </TableRow>
