--- a/app/src/main/res/layout/activity_division.xml
+++ b/app/src/main/res/layout/activity_division.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="match_parent"
     android:scaleX="1"
     android:scaleY="1"
@@ -22,7 +22,7 @@
         android:textStyle="bold" />
 
     <ScrollView
-        android:layout_width="418dp"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
         app:layout_constraintTop_toTopOf="@+id/titre_division"
@@ -86,8 +86,9 @@
                 android:id="@+id/imageView5"
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
-                android:scaleX="1"
-                android:scaleY="1"
+                android:layout_marginRight="12dp"
+                android:scaleX="0.8"
+                android:scaleY="0.8"
                 android:src="@drawable/div1" />
 
             <TextView
@@ -102,8 +103,8 @@
                 android:id="@+id/imageView9"
                 android:layout_width="wrap_content"
                 android:layout_height="300dp"
-                android:scaleX="1"
-                android:scaleY="1"
+                android:scaleX="0.75"
+                android:scaleY="0.75"
                 android:src="@drawable/div2" />
 
             <TextView
@@ -112,14 +113,16 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
+                android:width="200dp"
                 android:text="hello div3" />
 
             <ImageView
-                android:id="@+id/imageView11"
+                android:id="@+id/imageView4"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
-
-                android:src="@drawable/div3" />
+                android:layout_height="wrap_content"
+                android:scaleX="0.8"
+                android:scaleY="0.8"
+                app:srcCompat="@drawable/div3" />
 
         </LinearLayout>
     </ScrollView>
