--- a/app/src/main/res/layout/activity_factorielle.xml
+++ b/app/src/main/res/layout/activity_factorielle.xml
@@ -11,6 +11,7 @@
         android:layout_width="fill_parent"
         android:layout_height="40dp"
         android:background="#1777A5"
+        android:layout_marginTop="20dp"
         android:fontFamily="sans-serif-black"
         android:gravity="center_horizontal"
         android:text="Factorielle"
@@ -25,14 +26,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
+        android:layout_marginTop="48dp"
         android:layout_marginRight="5dp"
         android:text="hello factorielle"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.066" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView10"
