--- a/app/src/main/res/layout/activity_multiplication.xml
+++ b/app/src/main/res/layout/activity_multiplication.xml
@@ -3,13 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="5dp"
+    android:layout_height="fill_parent"
     android:layout_marginLeft="0dp"
     android:layout_marginTop="5dp"
-    android:layout_marginEnd="5dp"
     android:layout_marginRight="0dp"
-    android:layout_marginBottom="5dp"
     app:layout_marginBaseline="5dp"
     tools:context=".activity_multiplication">
 
@@ -25,45 +22,53 @@
         android:textSize="34sp"
         android:textStyle="bold" />
 
-
-    <TextView
-        android:id="@+id/emprunt"
-        android:layout_width="220dp"
-        android:layout_height="65dp"
-        android:layout_marginTop="224dp"
-        android:background="#160D98"
-        android:fontFamily="cursive"
-        android:gravity="center"
-        android:text="Table de multiplication"
-        android:textColor="#FBFBFB"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/explication_mult"
-        android:layout_width="wrap_content"
+    <ScrollView
+        android:id="@+id/scrollView2"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:text="hello Multiplication"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.468"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.155" />
+        app:layout_constraintTop_toBottomOf="@+id/titre"
+        tools:layout_editor_absoluteX="0dp">
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="152dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/table_mult"
-        tools:layout_editor_absoluteX="0dp" />
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/explication_mult"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginTop="10dp"
+                android:text="hello Multiplication" />
+
+            <TextView
+                android:id="@+id/table"
+                android:layout_width="250dp"
+                android:layout_height="65dp"
+                android:layout_marginLeft="70dp"
+                android:background="#160D98"
+                android:fontFamily="cursive"
+                android:gravity="center"
+                android:layout_marginTop="15dp"
+                android:text="Table de multiplication"
+                android:textColor="#FBFBFB"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                app:layout_constraintHorizontal_bias="0.497"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/imageView13"
+                android:layout_width="match_parent"
+                android:layout_height="423dp"
+                android:layout_marginTop="-25dp"
+                app:srcCompat="@drawable/table_mult" />
+
+        </LinearLayout>
+    </ScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
