--- a/app/src/main/res/layout/activity_puissance.xml
+++ b/app/src/main/res/layout/activity_puissance.xml
@@ -17,14 +17,14 @@
         android:textColor="#04061E"
         android:textSize="34sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteY="16dp" />
 
     <ScrollView
-        android:layout_width="390dp"
-        android:layout_height="679dp"
+        android:layout_width="358dp"
+        android:layout_height="553dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/titre_puissance"
-        tools:layout_editor_absoluteX="5dp">
+        tools:layout_editor_absoluteX="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -56,11 +56,11 @@
                 android:id="@+id/propriété"
                 android:layout_width="220dp"
                 android:layout_height="65dp"
-                android:layout_marginTop="4dp"
+                android:layout_marginLeft="80dp"
+                android:layout_marginTop="-40dp"
                 android:background="#160D98"
                 android:fontFamily="cursive"
                 android:gravity="center"
-                android:layout_marginLeft="90dp"
                 android:text="Propriétés"
                 android:textColor="#FBFBFB"
                 android:textSize="24sp"
@@ -72,9 +72,11 @@
 
             <ImageView
                 android:id="@+id/imageView20"
-                android:layout_width="match_parent"
-                android:layout_height="180dp"
-                android:layout_marginTop="5dp"
+                android:layout_width="482dp"
+                android:layout_height="253dp"
+                android:layout_marginTop="15dp"
+                android:scaleX="1.5"
+                android:scaleY="1.5"
                 app:srcCompat="@drawable/proprietes_puissances" />
 
         </LinearLayout>
