--- a/app/src/main/res/layout/activity_jeu1.xml
+++ b/app/src/main/res/layout/activity_jeu1.xml
@@ -6,16 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".Jeu1Activity">
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/resultat"
+            android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fontFamily="monospace"
@@ -26,7 +27,64 @@
             android:textColor="@color/colorText"
             android:textSize="24sp"
             android:typeface="sans" />
-    </FrameLayout>
+
+        <Space
+            android:id="@+id/Space"
+            android:layout_width="match_parent"
+            android:layout_height="47dp"
+            android:visibility="gone" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/buttonequation1"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="4dp"
+            android:layout_weight="0.2"
+
+            android:background="@drawable/button"
+            android:fontFamily="monospace"
+            android:onClick="buttonclick"
+            android:text="1"
+            android:textColor="@color/colorText"
+            android:textSize="24sp"
+            android:typeface="sans"
+            android:visibility="gone" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/buttonequation2"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="4dp"
+            android:layout_weight="0.2"
+
+            android:background="@drawable/button"
+            android:fontFamily="monospace"
+            android:onClick="buttonclick"
+            android:text="1"
+            android:textColor="@color/colorText"
+            android:textSize="24sp"
+            android:typeface="sans"
+            android:visibility="gone" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/buttonequation3"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="4dp"
+            android:layout_weight="0.2"
+
+            android:background="@drawable/button"
+            android:fontFamily="monospace"
+            android:onClick="buttonclick"
+            android:text="1"
+            android:textColor="@color/colorText"
+            android:textSize="24sp"
+            android:typeface="sans"
+            android:visibility="gone" />
+    </LinearLayout>
 
     <TableLayout
         android:id="@+id/tableLayout2"
@@ -65,6 +123,7 @@
                 android:background="@drawable/button"
                 android:layout_margin="4dp"
                 style="@style/Widget.AppCompat.Button.Borderless"
+
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="0.2"
@@ -409,7 +468,6 @@
 
         </TableRow>
     </TableLayout>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
