--- a/app/src/main/res/layout/activity_jeu1.xml
+++ b/app/src/main/res/layout/activity_jeu1.xml
@@ -7,6 +7,7 @@
     tools:context=".Jeu1Activity">
 
     <LinearLayout
+        android:id="@+id/linearLayout4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
