--- a/app/src/main/res/layout/activity_puissance.xml
+++ b/app/src/main/res/layout/activity_puissance.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#00FFFFFF"
+    android:backgroundTint="#00FFFFFF"
     tools:context=".activity_puissance">
 
     <TextView
@@ -29,6 +31,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="#00FFFFFF"
             android:orientation="vertical">
 
             <TextView
