--- a/app/src/main/res/layout/activity_jeu2.xml
+++ b/app/src/main/res/layout/activity_jeu2.xml
@@ -78,58 +78,65 @@
 
     <TextView
         android:id="@+id/textViewvert"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="25dp"
+        android:alpha="8"
         android:backgroundTint="#1FD626"
         android:text="TextView"
+        android:textAlignment="center"
+        android:textSize="20sp"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView3"
-        app:layout_constraintVertical_bias="0.19" />
+        app:layout_constraintVertical_bias="0.092" />
 
     <TextView
         android:id="@+id/textViewrouge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="25dp"
         android:backgroundTint="#EC0B0B"
         android:text="TextView"
+        android:textSize="20sp"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView3"
-        app:layout_constraintVertical_bias="0.32" />
+        app:layout_constraintVertical_bias="0.4" />
 
     <TextView
         android:id="@+id/textViewbleu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="25dp"
         android:backgroundTint="#1933C3"
         android:text="TextView"
+        android:textSize="20sp"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView3"
-        app:layout_constraintVertical_bias="0.529" />
+        app:layout_constraintVertical_bias="0.47" />
 
     <TextView
         android:id="@+id/textViewviolet"
-        android:layout_width="53dp"
-        android:layout_height="15dp"
+        android:layout_width="60dp"
+        android:layout_height="25dp"
         android:layout_marginBottom="116dp"
         android:backgroundTint="#A312BC"
         android:text="TextView"
+        android:textSize="20sp"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView3"
-        app:layout_constraintVertical_bias="0.996" />
+        app:layout_constraintVertical_bias="0.863" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
