--- a/app/src/main/res/layout/activity_multiplication.xml
+++ b/app/src/main/res/layout/activity_multiplication.xml
@@ -26,6 +26,7 @@
         android:id="@+id/scrollView2"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titre"
         tools:layout_editor_absoluteX="0dp">
 
@@ -39,8 +40,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
                 android:layout_marginTop="10dp"
+                android:layout_marginRight="5dp"
                 android:text="hello Multiplication" />
 
             <TextView
@@ -48,10 +49,10 @@
                 android:layout_width="250dp"
                 android:layout_height="65dp"
                 android:layout_marginLeft="70dp"
+                android:layout_marginTop="15dp"
                 android:background="#160D98"
                 android:fontFamily="cursive"
                 android:gravity="center"
-                android:layout_marginTop="15dp"
                 android:text="Table de multiplication"
                 android:textColor="#FBFBFB"
                 android:textSize="24sp"
@@ -63,8 +64,10 @@
             <ImageView
                 android:id="@+id/imageView13"
                 android:layout_width="match_parent"
-                android:layout_height="423dp"
+                android:layout_height="533dp"
                 android:layout_marginTop="-25dp"
+                android:background="#00FFFFFF"
+                android:backgroundTint="#00FFFFFF"
                 app:srcCompat="@drawable/table_mult" />
 
         </LinearLayout>
