--- a/app/src/main/res/layout/activity_soustraction.xml
+++ b/app/src/main/res/layout/activity_soustraction.xml
@@ -10,6 +10,8 @@
     android:layout_marginEnd="5dp"
     android:layout_marginRight="0dp"
     android:layout_marginBottom="5dp"
+    android:background="#00FFFFFF"
+    android:backgroundTint="#00FFFFFF"
     app:layout_marginBaseline="5dp"
     tools:context=".activity_soustraction">
 
@@ -25,52 +27,59 @@
         android:textSize="34sp"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/emprunt"
-        android:layout_width="220dp"
-        android:layout_height="65dp"
-        android:layout_marginStart="68dp"
-        android:layout_marginTop="256dp"
-        android:background="#160D98"
-        android:fontFamily="cursive"
-        android:gravity="center"
-        android:text="Emprunt"
-        android:textColor="#FBFBFB"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/soustr"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="80dp"
-        android:scaleX="0.5"
-        android:scaleY="0.5"
+    <ScrollView
+        android:layout_width="412dp"
+        android:layout_height="683dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:srcCompat="@drawable/sous"
-        tools:layout_editor_absoluteX="16dp" />
-
-    <TextView
-        android:id="@+id/explication_sous"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:text="hello Soustraction"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titre"
-        tools:layout_editor_absoluteX="124dp" />
+        app:layout_constraintVertical_bias="0.0">
 
-    <ImageView
-        android:id="@+id/imageView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="352dp"
-        android:scaleX="0.60"
-        android:scaleY="0.60"
-        app:layout_constraintTop_toBottomOf="@+id/titre"
-        app:srcCompat="@drawable/calculs2"
-        tools:layout_editor_absoluteX="16dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#00FFFFFF"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/explication_sous"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:text="hello Soustraction" />
+
+            <ImageView
+                android:id="@+id/soustr"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleX="0.5"
+                android:scaleY="0.5"
+                app:srcCompat="@drawable/sous" />
+
+            <TextView
+                android:id="@+id/emprunt"
+                android:layout_width="220dp"
+                android:layout_height="65dp"
+                android:background="#160D98"
+                android:fontFamily="cursive"
+                android:gravity="center"
+                android:text="Emprunt"
+                android:textColor="#FBFBFB"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:id="@+id/imageView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scaleX="0.60"
+                android:scaleY="0.60"
+                app:srcCompat="@drawable/calculs2" />
+
+        </LinearLayout>
+    </ScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
