--- a/app/src/main/res/layout/activity_fin_jeu2.xml
+++ b/app/src/main/res/layout/activity_fin_jeu2.xml
@@ -35,6 +35,7 @@
         android:id="@+id/imageView14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="visible"
         app:srcCompat="@drawable/fus_e3d"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp" />
