--- a/app/src/main/res/layout/activity_soustraction.xml
+++ b/app/src/main/res/layout/activity_soustraction.xml
@@ -28,14 +28,14 @@
         android:textStyle="bold" />
 
     <ScrollView
-        android:layout_width="412dp"
-        android:layout_height="683dp"
+        android:layout_width="375dp"
+        android:layout_height="732dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titre"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintVertical_bias="0.88">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -45,15 +45,15 @@
 
             <TextView
                 android:id="@+id/explication_sous"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="135dp"
                 android:layout_marginTop="12dp"
                 android:text="hello Soustraction" />
 
             <ImageView
                 android:id="@+id/soustr"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="232dp"
                 android:scaleX="0.5"
                 android:scaleY="0.5"
                 app:srcCompat="@drawable/sous" />
