update de la visualisation de TOUS les cours

--- a/app/src/main/res/layout/activity_cours.xml
+++ b/app/src/main/res/layout/activity_cours.xml
@@ -95,7 +95,7 @@
             android:weightSum="1">
 
             <Button
-                android:id="@+id/factoriel"
+                android:id="@+id/factorielle"
                 android:layout_width="0dp"
                 android:layout_height="100dp"
                 android:layout_margin="15dp"
