--- a/app/src/main/res/layout/activity_multiplication.xml
+++ b/app/src/main/res/layout/activity_multiplication.xml
@@ -25,8 +25,8 @@
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@+id/titre"
         tools:layout_editor_absoluteX="0dp">
 
@@ -65,7 +65,7 @@
                 android:id="@+id/imageView13"
                 android:layout_width="match_parent"
                 android:layout_height="533dp"
-                android:layout_marginTop="-25dp"
+                android:layout_marginTop="-75dp"
                 android:background="#00FFFFFF"
                 android:backgroundTint="#00FFFFFF"
                 app:srcCompat="@drawable/table_mult" />
