--- a/app/src/main/res/layout/activity_soustraction.xml
+++ b/app/src/main/res/layout/activity_soustraction.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="fill_parent"
     android:layout_margin="5dp"
     android:layout_marginLeft="0dp"
     android:layout_marginTop="5dp"
@@ -27,59 +27,59 @@
         android:textSize="34sp"
         android:textStyle="bold" />
 
-    <ScrollView
-        android:layout_width="375dp"
-        android:layout_height="732dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:background="#00FFFFFF"
+        android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@+id/titre"
-        app:layout_constraintVertical_bias="0.88">
+        tools:layout_editor_absoluteX="0dp">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/explication_sous"
+            android:layout_width="match_parent"
+            android:layout_height="135dp"
+            android:text="hello Soustraction" />
+
+        <ImageView
+            android:id="@+id/soustr"
+            android:layout_width="match_parent"
+            android:layout_height="132dp"
+            android:layout_marginTop="-55dp"
+            android:scaleX="0.6"
+            android:scaleY="0.6"
+            app:srcCompat="@drawable/sous" />
+
+        <TextView
+            android:id="@+id/emprunt"
+            android:layout_width="220dp"
+            android:layout_height="65dp"
+            android:layout_marginLeft="80dp"
+            android:layout_marginTop="-10dp"
+            android:background="#160D98"
+            android:fontFamily="cursive"
+            android:gravity="center"
+            android:text="Emprunt"
+            android:textColor="#FBFBFB"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/emprunt_texte"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#00FFFFFF"
-            android:orientation="vertical">
+            android:text="TextView" />
 
-            <TextView
-                android:id="@+id/explication_sous"
-                android:layout_width="match_parent"
-                android:layout_height="135dp"
-                android:layout_marginTop="12dp"
-                android:text="hello Soustraction" />
-
-            <ImageView
-                android:id="@+id/soustr"
-                android:layout_width="match_parent"
-                android:layout_height="232dp"
-                android:scaleX="0.5"
-                android:scaleY="0.5"
-                app:srcCompat="@drawable/sous" />
-
-            <TextView
-                android:id="@+id/emprunt"
-                android:layout_width="220dp"
-                android:layout_height="65dp"
-                android:background="#160D98"
-                android:fontFamily="cursive"
-                android:gravity="center"
-                android:text="Emprunt"
-                android:textColor="#FBFBFB"
-                android:textSize="24sp"
-                android:textStyle="bold" />
-
-            <ImageView
-                android:id="@+id/imageView7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:scaleX="0.60"
-                android:scaleY="0.60"
-                app:srcCompat="@drawable/calculs2" />
-
-        </LinearLayout>
-    </ScrollView>
+        <ImageView
+            android:id="@+id/imageView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="-25dp"
+            android:scaleX="0.60"
+            android:scaleY="0.60"
+            app:srcCompat="@drawable/calculs2" />
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
