historique des questions jeu 1

--- a/app/src/main/res/layout/activity_historique_jeu1.xml
+++ b/app/src/main/res/layout/activity_historique_jeu1.xml
@@ -6,4 +6,37 @@
     android:layout_height="match_parent"
     tools:context=".HistoriqueJeu1Activity">
 
+<ScrollView
+    android:id="@+id/scrollView2"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginStart="10dp"
+    android:layout_marginTop="100dp"
+    android:layout_marginEnd="10dp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent">
+
+    <LinearLayout
+        android:id="@+id/linearlayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" />
+</ScrollView>
+
+<TextView
+    android:id="@+id/textView9"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:fontFamily="sans-serif-thin"
+    android:text="Historique des questions"
+    android:textSize="34sp"
+    android:typeface="sans"
+    app:layout_constraintBottom_toTopOf="@+id/scrollView2"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
